[project]
name = "warp-launcher"
version = "0.1.0"
description = "A CLI tool that creates a launch script to run the Warp Terminal"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Bryan Acosta", email = "hello@bxlab.dev" },
]
keywords = ["warp", "terminal", "launcher", "windows", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/bxacosta/warp-launcher"
Repository = "https://github.com/bxacosta/warp-launcher"

[project.scripts]
warp-launcher = "warp_launcher.cli:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

# RUFF
[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "T20", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

# MYPY
[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true

# PYTEST
[tool.pytest.ini_options]
addopts = ["--verbose", "--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src"]

# GitLab Package Registry
[[tool.uv.index]]
name = "gitlab"
explicit = true
url = "https://gitlab.com/api/v4/projects/70108742/packages/pypi/simple"
publish-url = "https://gitlab.com/api/v4/projects/70108742/packages/pypi"
